Upgrade code to run with java 15